appId: ${APP_ID}
---
- tapOn:
    point: ${POINT}
- eraseText
- inputText: ${SECRET_TEXT}
