appId: ${APP_ID}
androidWebViewHierarchy: devtools
---
- tapOn: More actions
- tapOn: Members
- extendedWaitUntil:
    visible: Filter members
    timeout: 10000
